# v4r

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CITATION.md  CMakeLists.txt  CONTRIBUTING.md  Readme.md  package.xml  setup.sh
.gitlab/docker/clang/: Dockerfile
.gitlab/docker/codespell/: Dockerfile
.gitlab/docker/env/: Dockerfile
.gitlab/scripts/: build_clang_image.sh  build_codespell_image.sh  build_env_image.sh
apps/: CMakeLists.txt
apps/AttentionSegmentation/: CMakeLists.txt  createTrainingSet.cpp  scaleTrainingSet.cpp  segment.cpp  segmentAttention.cpp  segmentIncremental.cpp  trainSVM.cpp
apps/AttentionSegmentation/cfg/: ST-TrainAll.txt  ST-TrainAll.txt.scaled
apps/DemoTemporalPointCloudFilter/: CMakeLists.txt  Camera.h  glviewer.cpp  glviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sensor.cpp  sensor.h
apps/FeatureBasedViewRegistrationByMST/: CMakeLists.txt  main.cpp
apps/ObjectGroundTruthAnnotator/: CMakeLists.txt  GT6DOF.cpp  ReadMe.md  main_window.cpp  main_window.h  mainwindow.ui
apps/ObjectRecognizer/: CMakeLists.txt  ReadMe.md  check_hypotheses.cpp  compute_recognition_rate.cpp  compute_recognition_rate_over_occlusion.cpp  main.cpp  mv_eval.cpp
apps/ObjectRecognizer/cfg/: config.ini
apps/RTMT/: BundleAdjustment.cpp  BundleAdjustment.h  Camera.cpp  Camera.h  MultiSession.cpp  MultiSession.h  ObjectSegmentation.cpp  ObjectSegmentation.h  OcclusionClustering.cc  OcclusionClustering.hh  StoreTrackingModel.cpp  StoreTrackingModel.h  glviewer.cpp  glviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  params.cpp  params.h  sensor.cpp  sensor.h
apps/RTMT2/: CMakeLists.txt  CreateTrackingModel.cpp  CreateTrackingModel.h  ObjectSegmentation.cpp  ObjectSegmentation.h  OctreeVoxelCentroidContainerXYZRGB.hpp  glviewer.cpp  glviewer.h  main.cpp  mainwindow.cpp  mainwindow.ui  params.cpp  params.h  params.ui  sensor.cpp  sensor.h
apps/segmentation/: labelingSlic.cpp
apps/semantic_segmentation/: CMakeLists.txt  Readme.md  create_trainingdata.cpp  evaluate3DEF.cpp  semseg_demo.cpp
cmake/: V4RCompilerOptions.cmake  V4RDebug.cmake  V4RDetectCXXCompiler.cmake  V4RExtraTargets.cmake  V4RGenerateConfig.cmake  V4RGenerateHeaders.cmake  V4RModule.cmake  V4RStatus.cmake  V4RThirdParty.cmake  V4RUtils.cmake
cmake/templates/: V4RConfig.cmake.in  config.h.in
docs/: Doxyfile  ObjectClassification.md  ObjectDetection.md  ObjectModeling.md  v4r_style_guide.md
modules/: CMakeLists.txt
modules/apps/: CMakeLists.txt
modules/apps/src/: CloudSegmenter.cpp  ObjectRecognizer.cpp  ObjectRecognizerParameter.cpp  ViewRenderer.cpp  compute_recognition_rate.cpp  visualization.cpp
modules/attention_segmentation/: CMakeLists.txt
modules/attention_segmentation/src/: AddGroundTruth.cpp  AmHitRatio.cpp  BoundaryRelationsBase.cpp  BoundaryRelationsMeanColor.cpp  BoundaryRelationsMeanCurvature.cpp  BoundaryRelationsMeanDepth.cpp  ClusterNormalsToPlanes.cpp  ColorHistogram.cpp  EPBase.cpp  Fourier.cpp  FrintropSaliencyMap.cpp  Gabor.cpp  Graph.cpp  GraphCut.cpp  IKNSaliencyMap.cpp  MSR.cpp  MapsCombination.cpp  OrientationMap.cpp  PCA.cpp  PCLUtils.cpp  SVMFileCreator.cpp  SVMPredictorSingle.cpp  SVMScale.cpp  SVMTrainModel.cpp  StructuralRelations.cpp  SurfaceModel.cpp  SurfaceModeling.cpp  Symmetry3DMap.cpp  SymmetryMap.cpp  TJ.cpp  Texture.cpp  WTA.cpp  ZAdaptiveNormals.cc  algo.cpp  connectedComponents.cpp  conversions.cpp  cvgabor.cpp  disjoint-set.cpp  drawUtils.cpp  fitting_surface_pdm.cpp  (+12 more)
modules/calibration/: CMakeLists.txt
modules/calibration/src/: apply_calibration.cpp  calibration_params.cpp
modules/camera_tracking_and_mapping/: CMakeLists.txt
modules/camera_tracking_and_mapping/src/: OcclusionClustering.cc  OptimizeBundleColours.cc  PoissonTriangulation.cc  TSFData.cpp  TSFFrame.cc  TSFGlobalCloudFiltering.cc  TSFGlobalCloudFilteringSimple.cpp  TSFMapping.cc  TSFOptimizeBundle.cc  TSFPoseTrackerKLT.cc  TSFVisualSLAM.cpp  TSFilterCloudsXYZRGB.cpp
modules/change_detection/: CMakeLists.txt
modules/change_detection/src/: change_detection.cpp  viewport_checker.cpp  visualizer.cpp
modules/common/: CMakeLists.txt
modules/common/src/: ClusteringRNN.cpp  ZAdaptiveNormals.cpp  bicubic_interpolation.cpp  binary_algorithms.cpp  color_comparison.cpp  graph_geometric_consistency.cpp  histogram.cpp  img_loader.cpp  img_utils.cpp  intrinsics.cpp  metrics.cpp  miscellaneous.cpp  motion_blur_detection.cpp  noise_models.cpp  normals.cpp  (+12 more)
modules/core/: CMakeLists.txt
modules/features/: CMakeLists.txt
modules/io/: CMakeLists.txt
modules/keypoints/: CMakeLists.txt
modules/ml/: CMakeLists.txt
modules/object_modelling/: CMakeLists.txt
modules/recognition/: CMakeLists.txt
modules/reconstruction/: CMakeLists.txt
modules/registration/: CMakeLists.txt
modules/rendering/: CMakeLists.txt
modules/segmentation/: CMakeLists.txt
modules/semantic_segmentation/: CMakeLists.txt
modules/surface/: CMakeLists.txt
modules/tracking/: CMakeLists.txt
samples/: CMakeLists.txt
samples/eval/: CMakeLists.txt  incremental_object_learning.cpp  object_recognizer.cpp  object_recognizer_multiview.cpp
samples/examples/: CMakeLists.txt  camera_tracking_and_filtering.cpp  camera_tracking_and_mapping.cpp  depth_map_renderer.cpp  esf_object_classifier.cpp  imkOptimizeModel.cpp  imkRecognizeObject-file.cpp  incremental_object_learning.cpp  keypoint_extraction.cpp  noise_model_based_cloud_integration.cpp  object_tracker_mono.cpp  segment_pcd.cpp
samples/tools/: CMakeLists.txt  apply_auto_calibration.cpp  create_HV_registration_image_mask.cpp  create_annotated_images_from_recognition_gt_data.cpp  create_classification_db_from_ply_files.cpp  grab.cpp  motion_blur_detection.cpp  pcd2png.cpp  pcd_ground_truth_labelling.cpp  pointcloud2mesh.cpp  program_options.h  save_pose_into_pcd.cpp  texture_mesh.cpp  view_all_point_clouds_in_folder.cpp
scripts/: get_3dNet_Cat10.sh  get_3dNet_test_data.sh  get_TUW.sh
scripts/NYU_Depth_Dataset/: Readme.md
scripts/dev/: clang-format-all
test/: CMakeLists.txt  test.h
test/data/common/: intrinsics1.txt
(+422 files in other folders)
