<?xml version="1.0"?>
<package>
  <name>v4r</name>
  <version>2.0.8</version>
  <description>The Vision for Robotics Library of ACIN TUW</description>

  <maintainer email="faeulhammer@acin.tuwien.ac.at">Thomas Faeulhammer</maintainer>
  <maintainer email="alexandrov@acin.tuwien.ac.at">Sergey Alexandrov</maintainer>
  <maintainer email="zillich@acin.tuwien.ac.at">Michael Zillich</maintainer>

  <license>GPLv3</license>

  <url type="website">https://rgit.acin.tuwien.ac.at/v4r/v4r</url>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>assimp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libdevil-dev</build_depend>
  <build_depend>libfreenect</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>libglm-dev</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libopenni-dev</build_depend>
  <build_depend>libopenni2-dev</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>libsvm-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libvtk-qt</build_depend>
  <build_depend>libx11-dev</build_depend>
  <build_depend>libxcursor-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
  <build_depend>libxinerama-dev</build_depend>
  <build_depend>libxrandr</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>tbb</build_depend>

  <run_depend>assimp</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>libdevil-dev</run_depend>
  <run_depend>libfreenect</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>libglm-dev</run_depend>
  <run_depend>libgoogle-glog-dev</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>libopenni-dev</run_depend>
  <run_depend>libopenni2-dev</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-opengl-dev</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>libsvm-dev</run_depend>
  <run_depend>libvtk-qt</run_depend>
  <run_depend>libx11-dev</run_depend>
  <run_depend>libxi-dev</run_depend>
  <run_depend>libxinerama-dev</run_depend>
  <run_depend>libxrandr</run_depend>
  <run_depend>tbb</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
