add_subdirectory(segmentation)
add_subdirectory(FeatureBasedViewRegistrationByMST)
add_subdirectory(RTMT)
add_subdirectory(RTMT2)
add_subdirectory(ObjectGroundTruthAnnotator)
add_subdirectory(AttentionSegmentation)
add_subdirectory(ObjectRecognizer)
add_subdirectory(semantic_segmentation)
add_subdirectory(DemoTemporalPointCloudFilter)
